# sinaspider

./: .gitignore  .python-version  README.md  my_app.db  people3.db  pyproject.toml
sinaspider/: __init__.py  batch.py  config.py  database.py  dataset.py  exceptions.py  helper.py  meta.py  method.py  model.py  page.py  parser.py  script.py  thread.py  user.py  user_config.py  weibo.py
sinaspider/model/: __init__.py  base.py  config.py  model.py  user.py  weibo.py
sinaspider/parser/: __init__.py  helper.py  user.py  web.py  weibo.py  weico.py
sinaspider/script/: __init__.py  config.py  database.py  fetch.py  helper.py  liked.py  timeline.py  user.py  weibo.py
sinaspider/util/: helper.py  page.py  parser.py  thread.py
tests/: docker-test.yaml  test_sinaspider.py
