[tool.poetry]
name = "sinaspider"
version = "0.4.0"
description = ""
authors = ["Bao Hengtao <baohengtao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
lxml = "*"
loguru = "^0.5.3"
pendulum = "^2.1.2"
dataset = "^1.5.0"
python-baseconv = "^1.2.2"
PyExifTool = "^0.4.11"
keyring = "^23.1.0"
furl = "^2.1.2"
requests-cache = "^0.7.4"
typer = "^0.4.0"
rich = "^11.1.0"
bs4 = "^0.0.1"
psycopg2 = "^2.9.3"


[tool.poetry.dev-dependencies]
jupyterlab = "*"
JLDracula = "*"
jupyterlab_vim = "*"
ptpython = "*"
jupyterlab-lsp = "*"
python-lsp-server = "^1.2.1"
Sphinx = "^4.1.2"
pytest = "^6.2.5"

[tool.poetry.scripts]
sinaspider = 'sinaspider.script:app'

[build-system]
requires = ["poetry-core>=1.0.0", 'setuptools', 'wheel']
build-backend = "poetry.core.masonry.api"
